--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,11 @@
 [package]
-name = "sniffer"
+name = "psychic-guide"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bluer = { version = "0.15.7", features = ["bluetoothd"] }
-tokio = { version = "1", features = ["rt"] }
-log = "0.4.0"
-env_logger = "0.9.0"
-futures = "0.3"
-btleplug = "0.10.4"
+pcap = "1.0.0"
+radiotap = "1.3.0"
+libwifi = "0.3.1"
